vlib/v/checker/tests/wrong_none_on_or_block_err.vv
module main

fn main() {
	m := {
		`л`: 1
		`ő`: 25
	}
	println(m[`4`] or { none })
}
